// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/mobile/navbar it renders 1`] = `
<div
  className="makeStyles-root"
>
  <a
    className="makeStyles-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <svg
      className="makeStyles-logo"
      data-file-name="SvgEvmosWhiteLogo"
    />
  </a>
  <div
    className="makeStyles-actions"
  >
    <div
      className="makeStyles-hamburger"
      onClick={[MockFunction]}
      role="button"
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/mobile/navbar toggleNavMenus is called onClick 1`] = `
<div
  className="makeStyles-root"
>
  <a
    className="makeStyles-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <svg
      className="makeStyles-logo"
      data-file-name="SvgEvmosWhiteLogo"
    />
  </a>
  <div
    className="makeStyles-actions"
  >
    <div
      className="makeStyles-hamburger"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      role="button"
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;
